# Budgie-Sensibo

./: README.md  budgie-sensibo-monitor.py.in  install.sh  meson.build  purgeinstall.sh  uninstall.sh
src/: budgie-sensibo-monitor.plugin  com.solus-project.budgie-sensibo-monitor.gschema.xml  meson.build  meson_post_install
